--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -10,7 +10,7 @@
 /* Reset / Normalize
    ============================= */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+/*! normalize.css v8.0.1 | MIT License | github.com/Titisunflower/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
 /* Variables
    ============================= */
@@ -61,6 +61,11 @@
   
     /** HEADER **/
     --header-padding: 4rem 0 0;
+    --header-logo-position: relative;
+    --header-logo-link-display: inline-block;
+    --header-logo-link-position: absolute;
+    --header-logo-link-top: -1rem;
+    --header-logo-link-left: 0;
   
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -71,7 +76,7 @@
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 0 2rem;
+    --nav-item-margin: 0 2rem 0 0;
     --nav-item-link-hover: var(--color-white);
   
     /** BUTTON **/
@@ -180,28 +185,31 @@
   }
   
   ul.row {
-    margin: -1rem;
+    margin: 0;
     padding: 0;
     list-style: none;
   }
   
   [class*='col-'] {
-    margin: 1rem;
+    padding: 0.5rem;
   }
   
   .col-1-3 {
-    width: calc((100% / 3) - 2rem);
+    width: 33.33%;
   }
   
   .col-1-2 {
-    width: calc((100% / 2) - 2rem);
+    width: 50%;
   }
   
   /* Navbar
       ============================= */
   
+  .navbar-menu {
+    float: right;
+  }
+  
   .nav {
-    display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -213,12 +221,10 @@
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
-  }
-  
-  .nav .nav-item + .nav-item {
+    display: var(--nav-item-display);
     margin: var(--nav-item-margin);
   }
-
+  
   .nav .nav-link {
     display: block;
     padding: 0.5rem 0;
@@ -255,11 +261,16 @@
          z-index: 3;
          background: transparent !important;
   }
-
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  
+  .header-logo {
+    position: var(--header-logo-position);
+  }
+  
+  .header-logo a {
+    display: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
   }
   
   /* Footer
@@ -346,36 +357,18 @@
       ============================= */
   
   .section-hero {
-    position: relative;
-    margin-top: -8.5rem;
-  }
-
-  .section-hero .section-body {
-    padding: 10rem 4rem;
-  }
-
-  .section-hero .section-category {
-    color: var(--color-white);
-    text-transform: uppercase;
-  }
-  
-  .hero-homepage {
     background-position: 75% 0;
     background-repeat: no-repeat;
     background-size: 90rem auto;
     background-color: #010101;
   }
-
+  
   .section-hero .section-title {
     margin-bottom: 5rem;
   }
   
   .section-hero .section-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    min-height: 50vh;
+    padding: 10rem 40rem 2rem 0;
   }
   
   /* Section Latest news
@@ -390,13 +383,6 @@
   
   .section-services .row {
     flex-wrap: wrap;
-  }
-
-  /* Section ABOUT US
-    ============================= */
-  
-  .section-about-us [class*='col-'] {
-    align-self: center;
   }
 
   /*** 4. CARD ***/
@@ -525,36 +511,4 @@
     color: #efeded;
     font-size: 10rem;
     z-index: -1;
-  }
-
-  /*** ARTICLE PAGE ***/
-  /* Section HERO (article)
-    ============================= */
-
-  .hero-article {
-    background-size: 150rem 100rem;
-    background-position: 50% 0;
-  }
-
-  .hero-article::before {
-    content: "";
-    background: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 0;
-  }
-
-  .hero-article .section-inner {
-    text-align: center;
-    align-items: center;
-    min-height: 40vh;
-  }
-
-  .hero-article .section-body {
-    position: relative;
-    padding: 7rem 0 0;
-    z-index: 2;
   }
